--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=5.3.7"
+		"php": ">=5.3.7",
+		"endroid/qr-code": "^4.6",
+		"bacon/bacon-qr-code": "^2.0",
+		"pendalff/phpqrcode": "^1.0",
+		"simplesoftwareio/simple-qrcode": "^4.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
